--- a/pokemon/src/Pokedex.css
+++ b/pokemon/src/Pokedex.css
@@ -1,3 +1,10 @@
 .Pokedex{
     
 }
+
+.Pokedex-cards{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
