--- a/roll-dice/src/RollDice.css
+++ b/roll-dice/src/RollDice.css
@@ -1,3 +1,24 @@
+.RollDice{
+    min-height: 100vh;
+}
+
+.RollDice .roll-button{
+    width: 15em;
+    padding: 1.5em;
+    border: 0px;
+    border-radius: 10px;
+    color: #fff;
+    background-color: #000;
+    margin-top: 3em;
+    font-size: 1em;
+    font-weight: 700;
+}
+
+.RollDice .roll-button:hover{
+    cursor: pointer;
+    background-color: darkblue;
+}
+
 .dice-container{
     display: flex;
     flex-wrap: nowrap;
@@ -6,3 +27,4 @@
 .die{
     margin: 50px;
 }
+
