--- a/color-pallet-app/src/components/ColorBox.css
+++ b/color-pallet-app/src/components/ColorBox.css
@@ -60,3 +60,18 @@
     border-top-left-radius: 4px;
     text-transform: uppercase;
 }
+
+.copy-overlay{
+    opacity: 0;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.6s ease-in-out;
+}
+
+.copy-overlay .show{
+    opacity: 1;
+    transform: scale(50);
+    z-index: 10;
+    position: absolute;
+}
